--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 TODO
-    create pseudocode
-        first block is always L-90 (so gotta regenerative mechanism if it's inconsistent)
-    ensure maze is solvable
-    start code start code start code
+    go through tetris column major vs row major handout
+    FIX ROW-COLUMN GLITCH
+
+
 
     add konami code easter egg??
 
