--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 Indy README
 
+ps. sincere apologies for swearing in da commits. i am now older and wiser. onwards, 
+i shall push the commits more judiciously
+
 TODO
-    factor code out in mazeboard
     revamp the home screen
-    fix glitches
+    fix minor movement glitch
     clean up comments & rest of da code
 
 
